package com.agence.Trip.Hotel;

public enum HotelPriority {
    CHEAPEST,
    HIGHEST_RATED
}
