package com.agence.Trip.Hotel;

import java.util.List;

public interface IHotelRepository {
    List<Hotel> getAllHotels();
}
